Add segmentations tests

--- a/3-Transport.ipynb
+++ b/3-Transport.ipynb
@@ -70,14 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gmplot\n",
-    "import data_parser as parser\n",
+    "import parser\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -91,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
